[package]
name = "kuqu"
version = "0.1.0"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2024"
description = "SQL for Kubernetes resources"
repository = "https://github.com/ynqa/kuqu"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["derive"] }
datafusion = "48.0.0"
datafusion-datasource = "48.0.0"
datafusion-datasource-json = "48.0.0"
futures = "0.3.31"
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
# See https://github.com/kube-rs/kube/issues/1562 about `aws-lc-rs` feature
kube = { version = "1.1.0", features = ["client", "rustls-tls", "aws-lc-rs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
